# BorschTech

./: .gitignore  .gitmodules  CMakeLists.txt  generate_msvc_2022.bat  tech.sln
engine/: CMakeLists.txt  engine.cpp  engine.vcxproj  test.das  tutorial.inc  tutorial01.das
engine/src/: Application.cpp  Application.h  BTEngine.cpp  BTEngine.h  Camera.cpp  Camera.h  EditorApp.cpp  Engine.cpp  Engine.h  ImGuiDiligentRenderer.cpp  ImGuiDiligentRenderer.hpp  ImGuiImpl.cpp  ImGuiImpl.hpp  ImGuiImplWin32.cpp  ImGuiImplWin32.hpp  Scene.h  WinHPostface.h  WinHPreface.h  engine.cpp  imGui.cpp  imgui_vulkan_test.h  imgul_vulkan_test.cpp  main.cpp  main.h  vulkan_test.cpp
engine/src/Core/: Logging.cpp  Logging.h  Math.h
engine/src/Input/: InputManager.cpp  InputManager.h
engine/src/Win32/: Win32inputMapper.h
engine/src/core/: Logging.cpp  Logging.h  Math.h
engine/src/editor/: Editor.h  RenderTarget.h  TestCube.cpp  TestCube.h
engine/src/input/: InputManager.cpp
engine/src/io/: FileSystem.h
engine/src/test/: win32_dx12.cpp
engine/src/win32/: Win32Bootstrap.cpp
